# Flashcards-QC

./: README.md  app.py  pyproject.toml  requirements.txt
flashkard/: __init__.py  api.py  project.sqlite3  views.py
flashkard/static/css/: review.css
flashkard/templates/: dashboard.html  index.html  landing.html  login.html  register.html  review.html
